--- a/Chore/index.html
+++ b/Chore/index.html
@@ -1,9 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Popup contact form</title>
-    <link href="../default.css" rel="stylesheet">
-    <script src="app.js"></script>
+    <link href="./css/default.css" rel="stylesheet">
+    <script src="./js/app.js"></script>
 </head>
 <!-- Body Starts Here -->
 <body id="body" style="overflow:hidden;">
@@ -15,26 +14,33 @@
                 <h2>Chore time</h2>
                 <hr>
                 <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" value=""><br>
+                <input type="text" id="name" name="name" value="" required><br>
                 <label for="age">Age:</label><br>
-                <input type="number" id="age" name="age" value=""><br>
+                <input type="number" id="age" name="age" value="" required><br>
                 <label for="phone">Phone number:</label><br>
-                <input type="tel" id=phone name="phone" value=""><br>
+                <input type="tel" id=phone name="phone" value="" required><br>
                 <label for="email">Email:</label><br>
-                <input type="email" id=email name="email" value=""><br>
+                <input type="email" id=email name="email" value="" required><br>
                 <br>
                 <a href="javascript:%20check_empty()" id="submit">Send</a>
-                <!--<input id="name" name="name" placeholder="Name" type="text">
-                                    <input id="email" name="email" placeholder="Email" type="text">
-                <textarea id="msg" name="message" placeholder="Message"></textarea>
-                                    <a href="javascript:%20check_empty()" id="submit">Send</a>-->
             </form>
+
+            <div class="output">
+
+            </div>
         </div>
         <!-- Popup Div Ends Here -->
     </div>
     <!-- Display Popup Button -->
     <h1>Click Button To Popup Form Using Javascript</h1>
-    <button id="popup" onclick="div_show()">Popup</button>
+    <button id="popup" onclick="div_show(form)">Popup</button>
+
+    <div>
+        <h3>When you're ready click to get your chore</h3>
+        <button id="random" onclick="shuffle(chores)">O</button>
+        
+        <div> </div>
+    </div>
 </body>
 <!-- Body Ends Here -->
 </html>
