--- a/Chore/index.html
+++ b/Chore/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <link href="./css/default.css" rel="stylesheet">
-    <script src="./js/app.js"></script>
 </head>
 <!-- Body Starts Here -->
 <body id="body" style="overflow:hidden;">
@@ -22,7 +21,7 @@
                 <label for="email">Email:</label><br>
                 <input type="email" id=email name="email" value="" required><br>
                 <br>
-                <button type="submit" id="submit" onclick="alert('Hi')">Send</button>
+                <button type="button" id="submit">Send</button>
             </form>
 
             <div class="output">
@@ -54,7 +53,9 @@
         <div id="people"> </div>
         </div>
     </div>
-
+    <footer>
+        <script src="./js/app.js"></script>
+    </footer>
 </body>
 <!-- Body Ends Here -->
 </html>
